--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
 <div id="wrapper" class="full-height">
 </div>
+<script>
+    document.cookie="__env__=react-demo"; // 调试状态下  开启
+</script>
 <script type="text/javascript" src="http://static0.berbon.com/library/dist/js/website.js"></script>
 <script type="text/javascript" src="./dist/booter.js" id="booter"></script>
 <script type="text/javascript">
